--- a/hotel-qa.yml
+++ b/hotel-qa.yml
@@ -1,5 +1,5 @@
 build :
   version : 3.0
 author:
-  name: "selim lassoued [QA from github]"
+  name: "selim lassoued [QA from github updated14:25]"
   email: "selimlassoued41@gmail.com [QA]"
