--- a/hotel-prod.yml
+++ b/hotel-prod.yml
@@ -1,5 +1,5 @@
 build :
   version : 2.0
 author:
-  name: "selim lassoued [PROD update]"
+  name: "selim lassoued [PROD update darras]"
   email: "selimlassoued41@gmail.com [PROD]"
