Update author name in hotel.yml

--- a/hotel.yml
+++ b/hotel.yml
@@ -1,5 +1,5 @@
 build :
   version : 1.0
 author:
-  name: "selim lassoued"
+  name: "selim lassoued hotb nabeul 8000"
   email: "selimlassoued41@gmail.com"
