--- a/employee.yml
+++ b/employee.yml
@@ -1,5 +1,5 @@
 build :
   version : 1.0
 author:
-  name: "selim lassoued [EMPLOYEE]"
+  name: "selim lassoued [EMPLOYEE] edit "
   email: "selimlassoued41@gmail.com [EMPLOYEE]"
