Update hotel author name in hotel.yml

--- a/hotel.yml
+++ b/hotel.yml
@@ -1,5 +1,5 @@
 build :
   version : 1.0
 author:
-  name: "selim lassoued hotel edit nabeul 8000 "
+  name: "selim lassoued hotel edit1 nabeul 8000 "
   email: "selimlassoued41@gmail.com"
