Update author name in employee.yml

--- a/employee.yml
+++ b/employee.yml
@@ -1,5 +1,5 @@
 build :
   version : 1.0
 author:
-  name: "selim lassoued [EMPLOYEE] update webhook !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
+  name: "selim lassoued [EMPLOYEE] update webhook !!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
   email: "selimlassoued41@gmail.com [EMPLOYEE]"
